syntax = "proto3";
package consensuspb;

message ConsensusState {
  bytes dynasty_root = 1;
  int64 dynasty_size = 2;
  bytes proposer = 3;
  int64 timestamp = 4;
  int64 start_time = 5;
}
